--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,55 +1,56 @@
 <h1>Product Details</h1>
 <div>
   <strong>Product Name</strong>
-  <%= product.product_name %>
+  <%= @product.product_name %>
 </div>
 
 <div>
   <strong>Code</strong>
-  <%= product.code %>
+  <%= @product.code %>
 </div>
 
 <div>
   <strong>Barcode</strong>
-  <%= product.barcode %>
+  <%= @product.barcode %>
 </div>
 
 <div>
   <strong>Url</strong>
-  <%= product.url %>
+  <%= link_to "Click to see all informations", @product.url %>
 </div>
 
 <div>
   <strong>Quantity</strong>
-  <%= product.quantity %>
+  <%= @product.quantity %>
 </div>
 
 <div>
   <strong>Categories</strong>
-  <%= product.categories %>
+  <%= @product.categories %>
 </div>
 
 <div>
   <strong>Packaging</strong>
-  <%= product.packaging %>
+  <%= @product.packaging %>
 </div>
 
 <div>
   <strong>Brands</strong>
-  <%= product.brands %>
-</div>
-
-<div>
-  <strong>Image_Url</strong>
-  <%=# product.image_url %>
+  <%= @product.brands %>
 </div>
 
 <div>
   <strong>Imported At</strong>
-  <%= product.imported_t %>
+  <%= @product.imported_t %>
 </div>
 
 <div>
   <strong>Status</strong>
-  <%= product.status %>
+  <%= @product.status %>
 </div>
+
+<div>
+  <%= image_tag @product.image_url %>
+</div>
+
+<%= link_to 'Back', products_path %>
